# mastotui

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md
.config/tracey/: config.styx
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/spec/: mastotui.md
scripts/: check-spec.sh  setup-git-hooks.sh  worktree-add.sh
src/: app.rs  config.rs  credential.rs  error.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs  oauth.rs  types.rs
src/tui/: mod.rs  views.rs
tests/: spec_requirements.rs
